Allow coloring free blocks

--- a/index.html
+++ b/index.html
@@ -323,48 +323,34 @@
                                             </select>
                                         </div>
                                     </div>
+                                </div>
 
-                                    <div class="field">
-                                        <label class="label">Block Color</label>
-                                        <div class="select">
-                                            <select class="color">
-                                                <option value="0">White</option>
-                                                <option value="1">Red</option>
-                                                <option value="2">
-                                                    Orange
-                                                </option>
-                                                <option value="3">
-                                                    Yellow
-                                                </option>
-                                                <option value="4">Green</option>
-                                                <option value="5">Blue</option>
-                                                <option value="6">
-                                                    Indigo
-                                                </option>
-                                                <option value="7">
-                                                    Purple
-                                                </option>
-                                                <option value="8">Pink</option>
-                                                <option value="9">
-                                                    Seafoam Green
-                                                </option>
-                                                <option value="10">
-                                                    Pumpkin
-                                                </option>
-                                                <option value="11">
-                                                    Yellow-Green
-                                                </option>
-                                                <option value="12">Rose</option>
-                                                <option value="13">Teal</option>
-                                                <option value="14">
-                                                    Lavender
-                                                </option>
-                                                <option value="15">
-                                                    Cream
-                                                </option>
-                                                <option value="16">Grey</option>
-                                            </select>
-                                        </div>
+                                <div class="field">
+                                    <label class="label">Block Color</label>
+                                    <div class="select">
+                                        <select class="color">
+                                            <option value="0">White</option>
+                                            <option value="1">Red</option>
+                                            <option value="2">Orange</option>
+                                            <option value="3">Yellow</option>
+                                            <option value="4">Green</option>
+                                            <option value="5">Blue</option>
+                                            <option value="6">Indigo</option>
+                                            <option value="7">Purple</option>
+                                            <option value="8">Pink</option>
+                                            <option value="9">
+                                                Seafoam Green
+                                            </option>
+                                            <option value="10">Pumpkin</option>
+                                            <option value="11">
+                                                Yellow-Green
+                                            </option>
+                                            <option value="12">Rose</option>
+                                            <option value="13">Teal</option>
+                                            <option value="14">Lavender</option>
+                                            <option value="15">Cream</option>
+                                            <option value="16">Grey</option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
@@ -641,7 +627,7 @@
         <script src="utils.js?v=refresh1"></script>
         <script src="schedule.js?v=refresh1"></script>
         <script src="settings.js?v=refresh1"></script>
-        <script src="draw.js?v=refresh1"></script>
+        <script src="draw.js?v=refresh2"></script>
         <script src="cards.js?v=refresh1"></script>
         <script src="other.js?v=refresh1"></script>
         <script
