Add local lib files

--- a/index.html
+++ b/index.html
@@ -73,15 +73,13 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
-        />
+        <link rel="stylesheet" href="lib/bulma.min.css" />
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700"
             rel="stylesheet"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="lib/coloris.min.css" />
 
         <link rel="stylesheet" href="index.css?v=refresh1" />
     </head>
@@ -623,7 +621,9 @@
             </div>
         </footer>
 
-        <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
+        <script src="lib/print.min.js"></script>
+        <script src="lib/coloris.min.js"></script>
+
         <script src="utils.js?v=refresh1"></script>
         <script src="schedule.js?v=refresh1"></script>
         <script src="settings.js?v=refresh1"></script>
