Custom colors and inverted colors

--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@
                                 </label>
                             </div>
 
+                            <div class="field">
+                                <label class="checkbox">
+                                    <input type="checkbox" class="invert" />
+                                    Invert schedule colors (black background,
+                                    white text) (use with CUSTOM color option)
+                                </label>
+                            </div>
+
                             <br />
 
                             <button
@@ -323,33 +331,42 @@
                                     </div>
                                 </div>
 
-                                <div class="field">
+                                <div class="field mt-3">
                                     <label class="label">Block Color</label>
                                     <div class="select">
                                         <select class="color">
+                                            <option value="-1">CUSTOM</option>
                                             <option value="0">White</option>
+                                            <option value="16">Grey</option>
+                                            <option value="15">Cream</option>
+                                            <option value="12">Rose</option>
+                                            <option value="8">Pink</option>
                                             <option value="1">Red</option>
                                             <option value="2">Orange</option>
-                                            <option value="3">Yellow</option>
-                                            <option value="4">Green</option>
-                                            <option value="5">Blue</option>
-                                            <option value="6">Indigo</option>
-                                            <option value="7">Purple</option>
-                                            <option value="8">Pink</option>
-                                            <option value="9">
-                                                Seafoam Green
-                                            </option>
                                             <option value="10">Pumpkin</option>
+                                            <option value="3">Yellow</option>
                                             <option value="11">
                                                 Yellow-Green
                                             </option>
-                                            <option value="12">Rose</option>
+                                            <option value="4">Green</option>
+                                            <option value="9">
+                                                Seafoam Green
+                                            </option>
                                             <option value="13">Teal</option>
+                                            <option value="5">Blue</option>
+                                            <option value="6">Indigo</option>
+                                            <option value="7">Purple</option>
                                             <option value="14">Lavender</option>
-                                            <option value="15">Cream</option>
-                                            <option value="16">Grey</option>
                                         </select>
                                     </div>
+                                </div>
+                                <div class="field color-picker">
+                                    <input
+                                        type="text"
+                                        class="coloris"
+                                        value="#ff0000"
+                                        data-coloris
+                                    />
                                 </div>
                             </div>
                         </div>
@@ -387,6 +404,7 @@
                                     <label class="label">Block Color</label>
                                     <div class="select">
                                         <select class="color">
+                                            <option value="-1">CUSTOM</option>
                                             <option value="0">White</option>
                                             <option value="1">Red</option>
                                             <option value="2">Orange</option>
@@ -410,6 +428,14 @@
                                             <option value="16">Grey</option>
                                         </select>
                                     </div>
+                                </div>
+                                <div class="field color-picker">
+                                    <input
+                                        type="text"
+                                        class="coloris"
+                                        value="#ff0000"
+                                        data-coloris
+                                    />
                                 </div>
                             </div>
                         </div>
@@ -435,6 +461,7 @@
                                     <label class="label">Block Color</label>
                                     <div class="select">
                                         <select class="color">
+                                            <option value="-1">CUSTOM</option>
                                             <option value="0">White</option>
                                             <option value="1">Red</option>
                                             <option value="2">Orange</option>
@@ -458,6 +485,14 @@
                                             <option value="16">Grey</option>
                                         </select>
                                     </div>
+                                </div>
+                                <div class="field color-picker">
+                                    <input
+                                        type="text"
+                                        class="coloris"
+                                        value="#ff0000"
+                                        data-coloris
+                                    />
                                 </div>
                             </div>
                         </div>
@@ -485,6 +520,7 @@
                                     <label class="label">Block Color</label>
                                     <div class="select">
                                         <select class="color">
+                                            <option value="-1">CUSTOM</option>
                                             <option value="0">White</option>
                                             <option value="1">Red</option>
                                             <option value="2">Orange</option>
@@ -508,6 +544,14 @@
                                             <option value="16">Grey</option>
                                         </select>
                                     </div>
+                                </div>
+                                <div class="field color-picker">
+                                    <input
+                                        type="text"
+                                        class="coloris"
+                                        value="#ff0000"
+                                        data-coloris
+                                    />
                                 </div>
                             </div>
                         </div>
