Fix clock mobile styles

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="level-right">
-                        <div id="clock" class="container has-text-right">
+                    <div class="level-right clock-level">
+                        <div id="clock" class="container">
                             <div id="clock-time" class="is-italic"></div>
                             <div>
                                 <span
